@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -208,8 +208,10 @@ public class InMemoryJavaCompiler {
     }
 
     /**
-     * Compiles the list of classes with the given map of name and source code.
-     * This overloaded version of compile is useful for batch compile use cases.
+     * Compiles the list of classes with the given map of binary name and source code.
+     * This overloaded version of compile is useful for batch compile use cases, or
+     * if a compilation unit produces multiple class files. Returns a map from
+     * class binary names to class file content.
      *
      * @param inputMap The map containing the name of the class and corresponding source code
      * @throws RuntimeException if the compilation did not succeed
@@ -256,6 +258,22 @@ public class InMemoryJavaCompiler {
                 opts.add(opt);
             }
         }
+
+        // Add in preview mode if -Dtest.java.opts
+        String testOpts = System.getProperty("test.java.opts", "");
+        if (testOpts.contains("--enable-preview")) {
+            opts.add("--enable-preview");
+            opts.add("-source");
+            opts.add(Integer.toString(Runtime.version().feature()));
+        } else {
+            String preview = System.getProperty("test.enable.preview", "");
+            if (preview.equals("true")) {
+                opts.add("--enable-preview");
+                opts.add("-source");
+                opts.add(Integer.toString(Runtime.version().feature()));
+            }
+        }
+
         try (FileManagerWrapper fileManager = new FileManagerWrapper(file, moduleOverride)) {
             CompilationTask task = getCompiler().getTask(null, fileManager, null, opts, null, Arrays.asList(file));
             if (!task.call()) {
